--- a/+resources/LGA_Nuke_Shortcuts_Settings.ini
+++ b/+resources/LGA_Nuke_Shortcuts_Settings.ini
@@ -11,3 +11,7 @@ TargetY=1230
 
 ; Nota: Si cambias la disposición de los paneles en NukeX,
 ; es posible que necesites ajustar estos valores para que el script funcione correctamente.
+
+[Shortcuts]
+AddKeyframe=^+d
+ClickDopeSheet=^!+d
